03-kubernetes/raw-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
  namespace: echo-server-ns
  labels:
    app: echo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server-container
        image: ebob/echo-server:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
      imagePullSecrets:
      - name: dockerhub-secret
